AWS/AWS-Services/VPC/Real_tasks/_4b_SSM/_1_vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "Three-Tier-VPC"
  }
}
