AWS/AWS-Services/VPC/Real_tasks/_4b_SSM/_2_igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "${var.app_name}-IGW"
  }
}
